cmake_minimum_required(VERSION 3.0)
project(VlukanDemo)

set(CMAKE_CXX_STANDARD 17)

if (NOT T_LIBRARY_OUTPUT_PATH)
    set(T_LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/Bin)
    set(T_RUNTIME_OUTPUT_PATH ${CMAKE_BINARY_DIR}/Bin)
endif ()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${T_LIBRARY_OUTPUT_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${T_LIBRARY_OUTPUT_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${T_LIBRARY_OUTPUT_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${T_LIBRARY_OUTPUT_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${T_LIBRARY_OUTPUT_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${T_LIBRARY_OUTPUT_PATH})


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${T_RUNTIME_OUTPUT_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${T_RUNTIME_OUTPUT_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${T_RUNTIME_OUTPUT_PATH})

set(SHADER_PATH ${CMAKE_SOURCE_DIR}/Shaders)
configure_file("${CMAKE_SOURCE_DIR}/ProjectInfoPath.h.in" "${CMAKE_SOURCE_DIR}/ProjectInfoPath.h")

add_subdirectory(3rd)
add_subdirectory(GVK)
add_subdirectory(VulkanRHI)
link_directories(${CMAKE_CURRENT_BINARY_DIR}/Bin})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/GVK/public ${CMAKE_CURRENT_SOURCE_DIR}/3rd/glfw/include ${CMAKE_CURRENT_SOURCE_DIR}/3rd/vulkan/include  ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(VlukanDemo main.cpp)
target_link_libraries(VlukanDemo  ${T_RUNTIME_OUTPUT_PATH}/GVK.lib ${T_RUNTIME_OUTPUT_PATH}/glfw3.lib ${T_RUNTIME_OUTPUT_PATH}/vulkan-1.lib)


