cmake_minimum_required(VERSION 3.0)
project(VulkanRHI)

set(CMAKE_CXX_STANDARD 17)

if (NOT T_LIBRARY_OUTPUT_PATH)
    set(T_LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/Bin)
    set(T_RUNTIME_OUTPUT_PATH ${CMAKE_BINARY_DIR}/Bin)
endif ()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${T_LIBRARY_OUTPUT_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${T_LIBRARY_OUTPUT_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${T_LIBRARY_OUTPUT_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${T_LIBRARY_OUTPUT_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${T_LIBRARY_OUTPUT_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${T_LIBRARY_OUTPUT_PATH})


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${T_RUNTIME_OUTPUT_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${T_RUNTIME_OUTPUT_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${T_RUNTIME_OUTPUT_PATH})

set(VULKAN_PATH ${PROJECT_SOURCE_DIR}/../3rd/vulkan)

include_directories(${VULKAN_PATH}/include ${CMAKE_CURRENT_SOURCE_DIR}/../3rd/glfw/include ${CMAKE_CURRENT_SOURCE_DIR}/public ${CMAKE_SOURCE_DIR})

link_directories(${VULKAN_PATH}/lib ${CMAKE_CURRENT_BINARY_DIR}/Bin})

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/private/. VulkanRHI_SOURCE)
add_library(VulkanRHI STATIC ${VulkanRHI_SOURCE})
target_link_libraries(VulkanRHI  ${T_RUNTIME_OUTPUT_PATH}/glfw3.lib ${T_RUNTIME_OUTPUT_PATH}/vulkan-1.lib)
add_executable(VulkanRHI_Test Test.cpp)
target_link_libraries(VulkanRHI_Test VulkanRHI)

#add_dependencies(GVK )